=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

Breaking Changes
----------------

Changes
-------

Fixes
-----

 - Fixed an issue that caused the table list to display wrong results.

2018/02/09 1.8.2
================

Fixes
-----

 - Fix an issue that caused the translation strings to not be loaded correctly.

2018/01/16 1.8.1
================

Fixes
-----

 - Fix an issue that caused the ``Cluster`` tab to not be loaded correctly. 

 - Map the Tab key to insert spaces instead of a tab character.

 - Fixed an issue that caused the user name to not be displayed.

2017/12/15 1.8.0
================

Changes
-------

 - Updated CPU usage graph to use the value provided by ``os['cpu']['used']``.
   The graph does not show system/user/idle/stolen values any more.

2017/12/14 1.7.4
================

Fixes
-----

 - Remove horizontal scroll from the console editor.

 - Console results pagination is reset to 1 after each execution.

 - Calculate "idle" process CPU usage correctly and show it in the
   "CrateDB CPU Usage" graph.

 - Fixed an issue that caused the Admin UI to not display any tables when the 
   file system data are not fetchable.

 - Refresh Cluster Info after query execution in the console, to ensure that 
   the cluster info is always up to date. 

2017/11/13 1.7.3
================

Fixes
-----

 - The download url now links to the stable CrateDB version.

 - Replicates shards in the ``Unassigned`` row of the Shards view 
   are now grouped by id.

 - Fixed issue that caused closed partitions to show a ``CRITICAL`` 
   data state.

2017/11/06 1.7.2
================

Fixes
-----

 - Remove horizontal scroll from the console editor.

 - show all nodes in admin ui shard view, even those which 
   have no shards.

 - Fixed an issue that cause the statusbar to show an error
   if the user has an adblocker enabled. 

 - Fixed an issue that caused extra spaces to be added 