@@ -2,8 +2,8 @@
 
     <div class="filter__wrapper">
 
-        <input id="tableFilter" ng-model="search.$" placeholder="Filter tables ..." type="text">
-        <a ng-if="search.$" class="cr-clear-filters" ng-click="search.$ = '' ">
+        <input id="tableFilter" ng-model="query" placeholder="Filter tables ..." type="text">
+        <a ng-if="query" class="cr-clear-filters" ng-click="query = '' ">
             <i class="fa fa-times-circle" aria-hidden="true"></i>
         </a>
         <div>
@@ -26,20 +26,20 @@
         </div>
 
         <div class="tables-list" id="tables-list--{{$index}}" ng-class="{'collapse': isCollapsed($index), 'in': !isCollapsed($index)}">
-          <div class="side-bar__element tables-list__element" ng-class="{ 'active': isActive(table.table_schema, table.name)}" ng-if="renderSidebar" ng-repeat="table in type.tables | filter:search track by $index">
+          <div class="side-bar__element tables-list__element" ng-class="{ 'active': isActive(table.table_schema, table.name)}" ng-if="renderSidebar" ng-repeat="table in type.tables | filter:table_filter track by $index">
             <a href="#/tables/{{:: table.table_schema }}/{{:: table.name }}">
               <div class="table-name-row">
                 <div class="table-name">
-                  <h3>{{:: table.name }}</h3>
+                  <h3>{{ table.name }}</h3>
                 </div>
                 <div class="table-health">
                   <span class="health-bubble {{:: table.health_panel_class }}" title="{{:: table.health.status }}"></span>
                 </div>
               </div>
               <div class="table-information">
-                <span>{{:: table.records_total|roundWithUnit:1 }}
-                  {{:: 'TABLE.RECORDS' | translate }} ({{:: table.size|bytes }})</span>
-                <span><br>{{:: table.summary }}</span>
+                <span>{{ table.records_total|roundWithUnit:1 }}
+                  {{ 'TABLE.RECORDS' | translate }} ({{:: table.size|bytes }})</span>
+                <span><br>{{ table.summary }}</span>
               </div>
             </a>
           </div>
